refactor: rewrite reservation files to give them purpose
