# controller/reservation_controller.go
@@ -43,36 +43,28 @@ func (rc *reservationController) CreateReservation(c *gin.Context) {
 		return
 	}
 
-	userID, err := strconv.Atoi(userIDStr.(string))
+	userId, err := strconv.Atoi(userIDStr.(string))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
 		return
 	}
 
-	// Pegando os dados da reserva do corpo da requisição
-	var request model.ReservationRequest
-	request.UserID = userID
+	var i struct {
+		BorrowedDays int `json:"borrowed_days" binding:"required"`
+		BookId       int `json:"book_id" binding:"required"`
+	}
 
-	if err := c.ShouldBindJSON(&request); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid data"})
+	if err := c.ShouldBindJSON(&i); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid reservation input"})
 		return
 	}
 
-	// Criando a reserva
-	reservation, err := rc.useCase.CreateReservation(&request)
+	reservation, err := rc.useCase.CreateReservation(i.BorrowedDays, userId, i.BookId)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": fmt.Sprintf("error when creating reservation: %v", err)})
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	// Retornando o sucesso com a reserva criada
-	c.JSON(http.StatusCreated, gin.H{
-		"id":            reservation.ID,
-		"reserved_at":   reservation.ReservedAt,
-		"expires_at":    reservation.ExpiresAt,
-		"status":        reservation.Status,
-		"borrowed_days": reservation.BorrowedDays,
-		"fk_user_id":    reservation.UserID,
-		"fk_book_id":    reservation.BookID,
-	})
+	c.JSON(http.StatusCreated, reservation)
+
 }
